Configure crowdsec user in elasticsearch

--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles.yml
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles.yml
@@ -1,3 +1,14 @@
 _meta:
   type: "roles"
   config_version: 2
+
+crowdsec:
+  reserved: true
+  hidden: false
+  cluster_permissions: []
+  index_permissions:
+  - index_patterns:
+    - "crowdsec*"
+    allowed_actions:
+    - "crud"
+  static: false
