Allow grafana to read crowdsec es index

--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles.yml
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles.yml
@@ -12,3 +12,15 @@ crowdsec:
     allowed_actions:
     - "crud"
   static: false
+
+grafana:
+  reserved: true
+  hidden: false
+  cluster_permissions: []
+  index_permissions:
+  - index_patterns:
+    - "crowdsec*"
+    allowed_actions:
+    - "read"
+    - "indices:admin/mappings/get"
+  static: false
