--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/tasks/update_existing_indices.yml
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/tasks/update_existing_indices.yml
@@ -1,25 +1,22 @@
 ---
-- name: List existing ElasticSearch indices
-  ansible.builtin.uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/*?expand_wildcards=open,hidden"
-    method: GET
-    headers:
-      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
-    validate_certs: no
-    status_code: [200, 404]
-    force_basic_auth: yes
-    user: "{{ elasticsearch.admin_user.user }}"
-    password: "{{ elasticsearch.admin_user.password }}"
-  register: elasticsearch_existing_indices
+- name: "[{{ index_item.key }}] Find best matching template"
+  ansible.builtin.set_fact:
+    matching_template: "{{ item }}"
+  loop: "{{ elasticeach_index_templates }}"
+  loop_control:
+    label: "{{ item.name }}"
+  when: 
+  - index_item.key is match(item.index_regexp)
+  - (matching_template is not defined) or (item.priority > matching_template.priority)
 
-- name: Update existing ElasticSearch default indices
+- name: "[{{ index_item.key }}] Update existing ElasticSearch index with {{ matching_template.name }} settings"
   ansible.builtin.uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/{{ item.key }}/_settings"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/{{ index_item.key }}/_settings"
     method: PUT
     headers:
       Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body:
-      index: "{{ default_wanted_index_settings }}"
+      index: "{{ matching_template.settings }}"
     body_format: json
     validate_certs: no
     force_basic_auth: yes
@@ -28,32 +25,4 @@
   register: set_index_settings
   changed_when: True
   failed_when: "not set_index_settings.json.acknowledged | default (false)"
-  loop: "{{ elasticsearch_existing_indices.json | dict2items }}"
-  loop_control:
-    label: "{{ item.key }}"
-  when:
-    - not item.key is match("logstash.*")
-    - default_wanted_index_settings | dict2items | difference(item.value.settings.index | dict2items)
-
-- name: Update existing ElasticSearch logstash indices
-  ansible.builtin.uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/{{ item.key }}/_settings"
-    method: PUT
-    headers:
-      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
-    body:
-      index: "{{ default_wanted_index_settings | combine(logstash_wanted_index_settings) }}"
-    body_format: json
-    validate_certs: no
-    force_basic_auth: yes
-    user: "{{ elasticsearch.admin_user.user }}"
-    password: "{{ elasticsearch.admin_user.password }}"
-  register: set_index_settings
-  changed_when: True
-  failed_when: "not set_index_settings.json.acknowledged | default (false)"
-  loop: "{{ elasticsearch_existing_indices.json | dict2items }}"
-  loop_control:
-    label: "{{ item.key }}"
-  when:
-    - item.key is match("logstash.*")
-    - default_wanted_index_settings | combine(logstash_wanted_index_settings) | dict2items | difference(item.value.settings.index | dict2items)
+  when: matching_template.settings | dict2items | difference(index_item.value.settings.index | dict2items)
