--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
@@ -18,9 +18,9 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeclienterrors
       summary: Kubernetes API server client is experiencing errors.
     expr: |
-      (sum(rate(rest_client_requests_total{code=~"5.."}[5m])) by (cluster, instance, job, namespace)
+      (sum(rate(rest_client_requests_total{job="apiserver",code=~"5.."}[5m])) by (cluster, instance, job, namespace)
         /
-      sum(rate(rest_client_requests_total[5m])) by (cluster, instance, job, namespace))
+      sum(rate(rest_client_requests_total{job="apiserver"}[5m])) by (cluster, instance, job, namespace))
       > 0.01
     for: 15m
     labels:
