Deploy kubernetes secrets

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -124,6 +124,7 @@
 - name: Provision Kubernetes infra applications
   hosts: controller
   roles:
+    - kubernetes_secrets_deploy
     - kubernetes_metallb_deploy
     - kubernetes_nginx_ingress_deploy
     - kubernetes_storage_classes
