--- a/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
+++ b/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
@@ -12,6 +12,7 @@ kubernetes_dns_lb_ip: 192.168.100.23
 kubernetes_unifi_private_lb_ip: 192.168.100.24
 kubernetes_syncthing_lb_ip: 192.168.100.25
 kubernetes_crowdsec_lapi_ip: 192.168.100.26
+kubernetes_concourse_web_ip: 192.168.100.27
 kubernetes_ingress_http_port: 80
 kubernetes_ingress_https_port: 443
 kubernetes_lemonLdap_handler_port: 9000
