--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -6,3 +6,6 @@
     - role: cluster-reflector
       tags: kubernetes-app-cluster-reflector
       when: reflector_enabled | bool
+    - role: dev-argo-workflows
+      tags: kubernetes-app-dev-argo-workflows
+      when: argo_workflows_enabled | bool
