--- a/ansible/inventories/vagrant/group_vars/all/apps/auth-openldap.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/auth-openldap.yml
@@ -22,6 +22,11 @@ openldap_ldap_users:
     password: Passw0rd
     email: user@mail.net
     displayName: User LDAP
+  - id: argo
+    sn: Argo
+    password: Passw0rd
+    email: argo@mail.net
+    displayName: Argo
 
 openldap_ldap_groups:
   # SSO Groups, used to filter access via LemonLDAP
@@ -72,6 +77,7 @@ openldap_ldap_groups:
     ou: app_groups
     members:
       - user_ldap
+      - argo
   - id: homeassistant
     description: HomeAssistant
     ou: app_groups
