--- a/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -11,6 +11,10 @@ labels:
 
 namespace: dev-argo-workflows-tasks
 
+secretGenerator:
+- name: minio-credentials
+  env: config/minio-credentials.secret.env
+
 resources:
 - namespace.yaml
 - service-account.yaml
