--- a/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-configmap.yaml
+++ b/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-configmap.yaml
@@ -46,7 +46,64 @@ data:
   # container artifacts.
   artifactRepository: |
     # archiveLogs will archive the main container logs as an artifact
-    archiveLogs: false
+    archiveLogs: true
+
+    s3:
+      # Use the corresponding endpoint depending on your S3 provider:
+      #   AWS: s3.amazonaws.com
+      #   GCS: storage.googleapis.com
+      #   Minio: my-minio-endpoint.default:9000
+      endpoint: minio.dev-minio.svc.cluster.local:9000
+      bucket: argo-artifacts
+      #region: us-west-2
+      # insecure will disable TLS. Primarily used for minio installs not configured with TLS
+      insecure: true
+      # keyFormat is a format pattern to define how artifacts will be organized in a bucket.
+      # It can reference workflow metadata variables such as workflow.namespace, workflow.name,
+      # pod.name. Can also use strftime formating of workflow.creationTimestamp so that workflow
+      # artifacts can be organized by date. If omitted, will use `{{workflow.name}}/{{pod.name}}`,
+      # which has potential for have collisions.
+      # The following example pattern organizes workflow artifacts under a "my-artifacts" sub dir,
+      # then sub dirs for year, month, date and finally workflow name and pod.
+      # e.g.: my-artifacts/2018/08/23/my-workflow-abc123/my-workflow-abc123-1234567890
+      keyFormat: "artifacts\
+        /{{workflow.creationTimestamp.Y}}\
+        /{{workflow.creationTimestamp.m}}\
+        /{{workflow.creationTimestamp.d}}\
+        /{{workflow.name}}\
+        /{{pod.name}}"
+      # The actual secret object (in this example my-s3-credentials), should be created in every
+      # namespace where a workflow needs to store its artifacts to S3. If omitted,
+      # attempts to use IAM role to access the bucket (instead of accessKey/secretKey).
+      accessKeySecret:
+        name: minio-credentials
+        key: accessKey
+      secretKeySecret:
+        name: minio-credentials
+        key: secretKey
+      # If this is set to true, argo workflows will use AWS SDK default credentials provider chain. This will allow things like
+      # IRSA and any of the authentication methods that the golang SDK uses in it's default chain.
+      # If you are using IRSA on AWS, and set this option to true, you will also need to modify Argo-Server Deployment with
+      # `spec.template.spec.securityContext.fsGroup: 65534` configuration. This is required for IRSA to be able to access
+      # `/var/run/secrets/eks.amazonaws.com/serviceaccount/token` file, and authenticate with AWS.
+      useSDKCreds: false
+      encryptionOptions:
+        # If this is set to true, SSE-S3 encryption will be used to store objects
+        # unless kmsKeyId or serverSideCustomerKeySecret is set
+        enableEncryption: false
+        # A valid kms key id. If this value is set, the object stored in s3 will be encrypted with SSE-KMS
+        # Note: You cannot set both kmsKeyId and serverSideCustomerKeySecret
+        # kmsKeyId: ''
+        # Allows you to set a json blob of simple key value pairs. See
+        # https://docs.aws.amazon.com/kms/latest/developerguide/concepts.html#encrypt_context
+        # for more information
+        # kmsEncryptionContext: ''
+        # The actual secret object (in this example my-s3-credentials),
+        # should be created when using a custom secret to encrypt objects in using SSE-C
+        # Note: You cannot set both kmsKeyId and serverSideCustomerKeySecret
+        # serverSideCustomerKeySecret:
+        #  name: my-s3-credentials
+        #  key: secretKey
 
   # Defaults for main containers. These can be overridden by the template.
   # <= v3.3 only `resources` are supported.
