--- a/apps/vagrant/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+secretGenerator:
+- name: minio-credentials
+  env: config/minio-credentials.secret.env
+  behavior: replace
+
 resources:
 - ../../../base/dev-argo-workflows-tasks/deploy
