--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/defaults/main.yaml
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/defaults/main.yaml
@@ -1,7 +1,7 @@
 ---
 docker_private_registry:
-  domain: "registry.intra.{{ web_base_domain }}"
-  api_url: https://registry.intra.{{ web_base_domain }}
+  domain: "{{ docker_private_registry_domain }}"
+  api_url: "https://{{ docker_private_registry_domain }}"
   ca_path: "{{ docker_private_registry_ca_path }}"
   username: "{{ docker_registry_kube_registry_username }}"
   password: "{{ docker_registry_kube_registry_password }}"
