--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -161,10 +161,13 @@ openssl_custom_pki:
     locality_name: Paris
     organization_name: Test
     organizational_unit_name: Test
-    ca_common_name: "cluster.local"
+    ca_common_name: "cluster.local" # TODO use .lan TLD
     certs:
       - name: "docker-registry"
         common_name: "{{ docker_registry_servername }}"
+        san:
+          - "{{ docker_private_registry_domain }}"
+          - "{{ docker_registry_servername }}"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
