--- a/apps/base/dev-minio/deploy/deployment.yaml
+++ b/apps/base/dev-minio/deploy/deployment.yaml
@@ -37,7 +37,7 @@ spec:
       serviceAccountName: minio-sa
       containers:
         - name: minio
-          image: "registry.intra.k8s.test/minio:RELEASE.2023-04-13T03-08-07Z"
+          image: "registry.lan/minio:RELEASE.2023-04-13T03-08-07Z"
           imagePullPolicy: IfNotPresent
           command:
             - "/bin/sh"
