Fix remove example CNI configs

--- a/ansible/install_infra/roles/crio/tasks/main.yml
+++ b/ansible/install_infra/roles/crio/tasks/main.yml
@@ -72,7 +72,9 @@
     state: absent
   loop:
     - 100-crio-bridge.conf
+    - 100-crio-bridge.conflist
     - 200-loopback.conf
+    - 200-loopback.conflist
 
 - name: Enable crictl autocompletion
   ansible.builtin.copy:
